# gtm_ops

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .mise.toml  AGENTS.md  ARCHITECTURE.md  AUTOMATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN.md  LICENSE  README.md  SECURITY.md  WORKFLOW.md  bunfig.toml  cli.js  cli.ts  evaluation-report.example.json  mcp-server-config.example.json  mcp.example.json  package-lock.json  package.json  playwright.config.ts  playwright.console.config.ts  requirements.txt  server.js  server.ts  tmp_claude_transcript.txt  tsconfig.json  vitest.config.ts  vitest_out.txt  wrangler.toml  xo.config.cjs  xo.config.js
apps/ops-console/: 404.html  README.md  _headers  _redirects  domain.py  index.html  llms.txt  manifest.json  observability_client.py  pyproject.toml  robots.txt  site.webmanifest  sitemap.xml  tsconfig.json
apps/ops-console/console/: _console-globals.d.ts  agents-page.jsx  agents-page.tsx  agents-registry.js  app.css  app.jsx  app.tsx  counterfactual.ts  data.js  design-tokens.css  el-widget.jsx  el-widget.tsx  elevenlabs-ui.jsx  elevenlabs-ui.tsx  email-composer.tsx  email-prompt.ts  funnel-page.tsx  icons.jsx  icons.tsx  index.html  index_vanilla.html.bak  pages-1.jsx  pages-1.tsx  pages-2.jsx  pages-2.tsx  replay-panel.tsx  shell.jsx  shell.tsx  simulator-page.tsx  tweaks-panel.jsx  tweaks-panel.tsx  vertical-switcher.tsx  verticals.ts
apps/ops-console/eval-runs/: index.html
apps/ops-console/evaluation/: index.html
apps/ops-console/fixtures/: audit-logs.json  branding.json  eval-runs.json  (+14 more)
(+1219 files in other folders)
